# micromantid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jest.config.js  micromantid.cpp  package.json  pyproject.toml  setup_emsdk_env.sh
.github/workflows/: main.yml
cpp_src/: CMakeLists.txt  README.md  libmantid.cpp  micromantid.cpp  pyproject.toml  setup.py
cpp_src/mantid/: CMakeLists.txt  kernel_bind.cpp
cpp_src/mantid/Kernel/: CMakeLists.txt
cpp_src/mantid/Kernel/bindings/: Material.cpp  MaterialBuilder.cpp  Property.cpp
cpp_src/mantid/Kernel/inc/MantidKernel/: DllConfig.h  Strings.h  Unit.h
cpp_src/mantid/Kernel/src/: Material.cpp
cpp_src/mantid/NexusCpp/: CMakeLists.txt
diffs/: disable_archive.diff  disable_config.diff  disable_github_download.diff  disable_side_effects.diff  disable_tbb.diff  disable_tests.diff  disable_threadpool.diff  extra_includes.diff  frameworkmanager.diff  func_sig_mismatch.diff  numpy2.diff  plugins.diff  python312.diff  registrations.diff  simpleapi.diff  submodule.diff  testhelper.diff  wasm32.diff
inc/: registrations.hpp
inc/MantidAPI/: DllConfig.h
inc/MantidAlgorithms/: DllConfig.h
inc/MantidBeamline/: DllConfig.h
inc/MantidCrystal/: DllConfig.h
inc/MantidCurveFitting/: DllConfig.h
inc/MantidDataHandling/: DllConfig.h
inc/MantidDataObjects/: DllConfig.h
inc/MantidGeometry/: DllConfig.h
inc/MantidJson/: DllConfig.h
inc/MantidKernel/: DllConfig.h
inc/MantidLegacyNexus/: DllConfig.h
inc/MantidMDAlgorithms/: DllConfig.h
inc/MantidNexus/: DllConfig.h
inc/MantidNexusGeometry/: DllConfig.h
inc/MantidPythonInterface/core/: DllConfig.h
instrument/: CMakeLists.txt
mantid/: CMakeLists.txt
mantid/API/: CMakeLists.txt
mantid/API/src/: AlgoTimeRegister.cpp  Algorithm.cpp  MatrixWorkspace.cpp
mantid/Beamline/: CMakeLists.txt
mantid/Geometry/: CMakeLists.txt
mantid/Geometry/inc/MantidGeometry/: DllConfig.h
mantid/Geometry/inc/MantidGeometry/Instrument/: ParameterMap.h
mantid/Geometry/src/Instrument/: ParameterMap.cpp
mantid/HistogramData/: CMakeLists.txt
mantid/HistogramData/inc/MantidHistogramData/: DllConfig.h
mantid/Indexing/: CMakeLists.txt
mantid/Indexing/inc/MantidIndexing/: DllConfig.h
mantid/Json/: CMakeLists.txt
mantid/Kernel/: CMakeLists.txt
mantid/Kernel/inc/MantidKernel/: ConfigService.h  System.h
mantid/Kernel/src/: AttenuationProfile.cpp  ConfigService.cpp  DllOpen.cpp  InternetHelper.cpp  MantidVersion.cpp  Memory.cpp
mantid/NexusCpp/: CMakeLists.txt
mantid/NexusCpp/inc/MantidNexusCpp/: DllConfig.h  napiconfig.h
mantid/Types/: CMakeLists.txt
mantid/Types/inc/MantidTypes/: DllConfig.h
micromantid/: Mantid.properties  __init__.py  api.py  dataobjects.py  geometry.py  kernel.py  simpleapi.py
micromantid/api/: __init__.py
micromantid/kernel/: __init__.py
micromantid/plugins/python/: python-plugin-manifest.txt
micromantid/plugins/python/algorithms/: README.md
micromantid/utils/: __init__.py
src/: CMakeLists.txt  MantidVersion.cpp  algorithms.cmake  api.cmake  beamline.cmake  crystal.cmake  curvefitting.cmake  datahandling.cmake  dataobjects.cmake  geometry.cmake  histo.cmake  index.cmake  instrument_wheel.cmake  json.cmake  kernel.cmake  kernel_bind.cpp  mantidnexus.cmake  md_algos.cmake  nexus.cmake  pythonapi.cmake  pythoncore.cmake  pythondataobjects.cmake  pythongeometry.cmake  pythonkernel.cmake  types.cmake
tests/: CMakeLists.txt  jestSetup.js  runTest.py  test.js  test_kernel.py  testwheel.cmake
tests/testhelpers/: CMakeLists.txt  extract_framework.cmake  pyproject.toml
