set(SRC_FILES
    src/Crystal/BraggScatterer.cpp
    src/Crystal/BraggScattererFactory.cpp
    src/Crystal/BraggScattererInCrystalStructure.cpp
    src/Crystal/CenteringGroup.cpp
    src/Crystal/CompositeBraggScatterer.cpp
    src/Crystal/CrystalStructure.cpp
    src/Crystal/CyclicGroup.cpp
    src/Crystal/Group.cpp
    src/Crystal/GroupTransformation.cpp
    src/Crystal/IsotropicAtomBraggScatterer.cpp
    src/Crystal/OrientedLattice.cpp
    src/Crystal/PointGroup.cpp
    src/Crystal/PointGroupFactory.cpp
    src/Crystal/ProductOfCyclicGroups.cpp
    src/Crystal/ReflectionCondition.cpp
    src/Crystal/SpaceGroup.cpp
    src/Crystal/SpaceGroupFactory.cpp
    src/Crystal/SymmetryElement.cpp
    src/Crystal/SymmetryElementFactory.cpp
    src/Crystal/SymmetryOperation.cpp
    src/Crystal/SymmetryOperationFactory.cpp
    src/Crystal/SymmetryOperationSymbolParser.cpp
    src/Crystal/UnitCell.cpp
    src/Crystal/V3R.cpp
    src/IObjComponent.cpp
    src/Instrument.cpp
    src/Instrument/Component.cpp
    src/Instrument/ComponentInfo.cpp
    src/Instrument/ComponentInfoBankHelpers.cpp
    src/Instrument/CompAssembly.cpp
    src/Instrument/DetectorInfo.cpp
    src/Instrument/DetectorGroup.cpp
    src/Instrument/Detector.cpp
    src/Instrument/FitParameter.cpp
    src/Instrument/GridDetector.cpp
    src/Instrument/GridDetectorPixel.cpp
    src/Instrument/Goniometer.cpp
    src/Instrument/IDFObject.cpp
    src/Instrument/InstrumentDefinitionParser.cpp
    src/Instrument/InstrumentVisitor.cpp
    src/Instrument/ObjCompAssembly.cpp
    src/Instrument/ObjComponent.cpp
    src/Instrument/Parameter.cpp
    src/Instrument/ParameterMap.cpp
    src/Instrument/ParComponentFactory.cpp
    src/Instrument/RectangularDetector.cpp
    src/Instrument/ReferenceFrame.cpp
    src/Instrument/StructuredDetector.cpp
    src/Instrument/XMLInstrumentParameter.cpp
    src/MDGeometry/GeneralFrame.cpp
    src/MDGeometry/MDGeometryXMLBuilder.cpp
    src/MDGeometry/MDHistoDimension.cpp
    src/Math/PolyBase.cpp
    src/Math/Triple.cpp
    src/Math/mathSupport.cpp
    src/Objects/BoundingBox.cpp
    src/Objects/CSGObject.cpp
    src/Objects/MeshObject.cpp
    src/Objects/MeshObject2D.cpp
    src/Objects/MeshObjectCommon.cpp
    src/Objects/Rules.cpp
    src/Objects/RuleItems.cpp
    src/Objects/ShapeFactory.cpp
    src/Objects/Track.cpp
    src/RandomPoint.cpp
    src/Rendering/GeometryHandler.cpp
    src/Rendering/GeometryTriangulator.cpp
    src/Rendering/vtkGeometryCacheReader.cpp
    src/Rendering/vtkGeometryCacheWriter.cpp
    src/Rendering/RenderingHelpersThrowing.cpp
    src/Rendering/ShapeInfo.cpp
    src/Surfaces/Cone.cpp
    src/Surfaces/Cylinder.cpp
    src/Surfaces/Line.cpp
    src/Surfaces/LineIntersectVisit.cpp
    src/Surfaces/Plane.cpp
    src/Surfaces/Quadratic.cpp
    src/Surfaces/Sphere.cpp
    src/Surfaces/Surface.cpp
    src/Surfaces/Torus.cpp
)

add_library(Geometry OBJECT ${SRC_FILES})
target_include_directories(Geometry PRIVATE
    inc
    ../Beamline/inc
    ../Json/inc
    ../Kernel/inc
    ../NexusCpp/inc
    ../Types/inc
    ${Boost_INCLUDE_DIRS}
    ${EIGEN3_INCLUDE_DIRS}
)
set_property(TARGET Geometry PROPERTY POSITION_INDEPENDENT_CODE ON)
