set(SRC_FILES
    src/Atom.cpp
    src/AttenuationProfile.cpp
    src/ArrayProperty.cpp
    src/CatalogInfo.cpp
    src/ChecksumHelper.cpp
    src/ConfigService.cpp
    src/CompositeValidator.cpp
    src/DataItem.cpp
    src/DateAndTime.cpp
    src/DeltaEMode.cpp
    src/DllOpen.cpp
    src/EnvironmentHistory.cpp
    src/Exception.cpp
    src/FacilityInfo.cpp
    src/FileDescriptor.cpp
    src/FilteredTimeSeriesProperty.cpp
    src/FloatingPointComparison.cpp
    src/Glob.cpp
    src/ICatalogInfo.cpp
    src/InstrumentInfo.cpp
    src/Interpolation.cpp
    src/IPropertyManager.cpp
    src/LibraryManager.cpp
    src/LibraryWrapper.cpp
    src/LiveListenerInfo.cpp
    src/Logger.cpp
    src/LogFilter.cpp
    src/LogParser.cpp
    src/MandatoryValidator.cpp
    src/MantidVersion.cpp
    src/Material.cpp
    src/MaterialBuilder.cpp
    src/Matrix.cpp
    src/MDUnit.cpp
    src/MDUnitFactory.cpp
    src/MersenneTwister.cpp
    src/Memory.cpp
    src/NDRandomNumberGenerator.cpp
    src/NeutronAtom.cpp
    src/NexusDescriptor.cpp
    src/NexusHDF5Descriptor.cpp
    src/NullValidator.cpp
    src/OptionalBool.cpp
    src/ProgressBase.cpp
    src/Property.cpp
    src/PropertyHistory.cpp
    src/PropertyManager.cpp
    src/PropertyManagerDataService.cpp
    src/PropertyManagerOwner.cpp
    src/PropertyManagerProperty.cpp
    src/PropertyNexus.cpp
    src/PropertyWithValue.cpp
    src/PropertyWithValueJSON.cpp
    src/PseudoRandomNumberGenerator.cpp
    src/Quat.cpp
    src/RegexStrings.cpp
    src/SingletonHolder.cpp
    src/SplittingInterval.cpp
    src/Statistics.cpp
    src/StdoutChannel.cpp
    src/Strings.cpp
    src/StringTokenizer.cpp
    src/ThreadSafeLogStream.cpp
    src/TimeROI.cpp
    src/Timer.cpp
    src/TimeSeriesProperty.cpp
    src/TopicInfo.cpp
    src/Unit.cpp
    src/UnitLabel.cpp
    src/UnitLabelTypes.cpp
    src/V3D.cpp
    src/VectorHelper.cpp
    src/VMD.cpp
)

add_library(Kernel OBJECT ${SRC_FILES})
target_include_directories(Kernel PRIVATE
    inc
    ../Json/inc
    ../Types/inc
    ../NexusCpp/inc
    ${Boost_INCLUDE_DIRS}
)
set_property(TARGET Kernel PROPERTY POSITION_INDEPENDENT_CODE ON)
